Task Form select2 fix

--- a/WebApplication/TMS/pages/components/navBar.html
+++ b/WebApplication/TMS/pages/components/navBar.html
@@ -30,7 +30,7 @@
                                         <h4 class="modal-title">New Task</h4>
                                     </div>
                                     <div class="modal-body">
-                                        <div class="box box-white no-border">
+
                                             <div class="form-group">
                                                 <label for="taskName" class="col-sm-3 control-label">Task
                                                     Name</label>
@@ -40,28 +40,17 @@
                                                 </div>
                                             </div>
                                             <div class="form-group">
-                                                <label for="project" class="col-sm-3 control-label">Task
+                                                <label for="project1" class="col-sm-3 control-label">Task
                                                     Name</label>
                                                 <div class="col-sm-9">
-                                                    <select class="selectpicker form-control" data-size="5"
-                                                            title="Select Project" id="project">
+                                                    <select class="form-control select2" data-size="5" placeholder="OMG"
+                                                            title="Select Project" id="project1">
                                                         <option>1</option>
                                                         <option>2</option>
                                                     </select>
                                                 </div>
                                             </div>
-                                            <div class="form-group">
-                                                <label for="project" class="col-sm-3 control-label">Task
-                                                    Name</label>
-                                                <div class="col-sm-9">
-                                                    <select class="selectpicker form-control" data-size="5"
-                                                            title="Select Project" id="project">
-                                                        <option>1</option>
-                                                        <option>2</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                        </div>
+
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-default pull-left" data-dismiss="modal">
